# pickled_pipeline

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: architecture.md  development.md  index.md  legibility-audit.md  quality.md
docs/decisions/: 0001-cache-persistence-contract.md
src/pickled_pipeline/: cache.py  cli.py
tests/: conftest.py  test_cache_basic.py  test_cache_persistence.py  test_cli.py  test_exclude_args.py  test_pipeline.py  test_repo_legibility.py  test_truncation.py
