[project]
name = "pickled_pipeline"
dynamic = ["version"]
description = "A package for caching repeat runs of pipelines that have expensive operations along the way"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "click>=8.3.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/btfranklin/pickled_pipeline"
Issues = "https://github.com/btfranklin/pickled_pipeline/issues"
Changelog = "https://github.com/btfranklin/pickled_pipeline/releases"
Repository = "https://github.com/btfranklin/pickled_pipeline.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "mypy>=2.0.0",
]

[project.scripts]
pickled-pipeline = "pickled_pipeline.cli:cli"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
excludes = ["tests/**"]

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check src tests"
typecheck = "mypy"
check = {composite = ["lint", "typecheck", "test"]}

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
